--- a/css/vian2.css
+++ b/css/vian2.css
@@ -67,7 +67,7 @@
   top: 0;
  height: 100%;
   width: 0;
-  background-color: #007bff;
+  background-color: #004cff;
   transition: width 0.3s ease-in-out;
  }
         
